--- a/gateway/package.json
+++ b/gateway/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@rideshare/shared": "*",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
