--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "node --watch src/app.js",
-    "test": "node --test tests/*.js",
+    "test": "node --test tests/*.js tests/integration/*.js",
     "test:ci": "npm run test"
   },
   "dependencies": {
@@ -13,7 +13,8 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
