Feat : Location Service Implemented

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ JWT_EXPIRY=7d
 # Location Service (port 3003)
 # -------------------------------------------
 # PORT=3003
+# LOCATION_MONGODB_URI=mongodb://localhost:27017/rideshare_locations
+# JWT_SECRET= (same as user-service for Socket.IO auth)
 
 # -------------------------------------------
 # Payment Service (port 3004)
