--- a/services/location-service/package.json
+++ b/services/location-service/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "node --watch src/app.js",
-    "test": "node --test tests/*.js",
+    "test": "node --test tests/*.js tests/integration/*.js",
     "test:ci": "npm run test"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.4"
   },
   "dependencies": {
     "@rideshare/shared": "*",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "socket.io": "^4.6.1"
   }
