Feat : Ride Service Implemented

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,15 @@ JWT_EXPIRY=7d
 # Ride Service (port 3002)
 # -------------------------------------------
 # PORT=3002
-# MONGODB_URI=mongodb://localhost:27017/rideshare_rides
+# RIDE_MONGODB_URI=mongodb://localhost:27017/rideshare_rides
+# LOCATION_SERVICE_URL=http://localhost:3003
+# JWT_SECRET= (same as user-service)
+# ACCEPTANCE_TIMEOUT_SEC=60
+# BASE_FARE=2.5
+# RATE_PER_KM=1.2
+# RATE_PER_MIN=0.25
+# SURGE_MULTIPLIER=1
+# KAFKA_RIDE_TOPIC=ride-events
 
 # -------------------------------------------
 # Location Service (port 3003)
